<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_profile_image">profile image</string>
    <string name="default_user_name">Alena Stanchyts</string>
    <string name="default_user_online_status">онлайн</string>
    <string name="template_user_status">статус</string>
    <string name="birth_date">дата рождения</string>
    <string name="default_user_birth_date">1982-15-12</string>
    <string name="country">страна</string>
    <string name="default_country">Беларусь</string>
    <string name="wall_poste_button_text">написать на стене</string>
    <string-array name="screen_array">
        <item>Profile</item>
        <item>Friends</item>
        <item>Wall</item>
        <item>News</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="screen_one">Screen one</string>
    <string name="page">Page:</string>
    <string name="screen_three">Screen three</string>
    <string name="template_user_name">Alena Stanchyts</string>
    <string name="template_user_online_status">online</string>
    <string name="title_vk_login_activity">Login</string>
    <string name="title_friends_activity">Friends</string>
    <string-array name="drawer_array">
         <item>Friends</item>
        <item>Wall</item>
        <item>News</item>
    </string-array>
</resources>
