<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_view_more"
    android:layout_below="@id/userprofile_head"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding"
    android:visibility="visible">

    <TextView
        android:id="@+id/user_profile_status_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/template_user_status"
        android:textColor="@color/user_profile_text_status_full"
        android:background="@drawable/profile_view_more_background"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/profile_view_more_body"
        android:layout_below="@id/user_profile_status_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_padding"
        android:textColor="@color/user_profile_text_status_full"
        android:background="@drawable/profile_view_more_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/birth_date"
            android:textColor="@color/user_profile_text_caption"
            android:textSize="@dimen/view_more_text_size_default"/>

        <TextView
            android:id="@+id/user_profile_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/default_user_birth_date"
            android:textColor="@color/user_profile_text_info"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/default_padding_half"
            android:layout_marginRight="@dimen/default_padding_half"
            android:background="@drawable/view_more_divider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/country"
            android:textColor="@color/user_profile_text_caption"
            android:textSize="@dimen/view_more_text_size_default"/>

        <TextView
            android:id="@+id/user_profile_home_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/default_country"
            android:textColor="@color/user_profile_text_info"/>

    </LinearLayout>
</RelativeLayout>